--- a/learning.html
+++ b/learning.html
@@ -127,11 +127,11 @@
   </nav>
 </header>
 
-  <!-- ✅ MAIN -->
+  <!-- ✅ MAIN (replaced only this part) -->
   <main class="wrap">
 
     <!-- ✅ Banner must be FIRST element in main -->
-    <div class="banner banner--practices" aria-label="KRUNIKI Learning Banner">
+    <div class="banner banner--practices" aria-label="KRUNIKI Practices Banner">
       <img
         src="assets/images/banners/learning-banner.webp"
         alt="KRUNIKI Learning — Foundations Banner"
@@ -143,78 +143,95 @@
     <section id="top" class="panel hero">
       <div class="heroGrid">
         <div class="heroText">
-
           <div class="goldline">
             Learning • พื้นที่เรียนรู้เชิงระบบ (เวอร์ชันสาธารณะ) KRUNIKI<br>
             Learning • Systems-Based Learning Space (Public Version) KRUNIKI
           </div>
 
-          <h1>
-            Foundations of Heart Awakening<br>
-           
-          </h1>
+          <h1>Foundations of Heart Awakening</h1>
 
           <p class="lead">
-            หน้านี้จัดทำขึ้นเพื่ออธิบายฐานความเข้าใจเชิงระบบ (Foundational Understanding) ของ KRUNIKI สำหรับผู้ที่ต้องการเริ่มดูแลหัวใจและระบบประสาทอย่างเป็นลำดับ ปลอดภัย และสอดคล้องกับชีวิตประจำวัน<br>
+            หน้านี้จัดทำขึ้นเพื่ออธิบายฐานความเข้าใจเชิงระบบ (Foundational Understanding) ของ KRUNIKI สำหรับบุคคลที่ต้องการเริ่มดูแลหัวใจและระบบประสาทอย่างเป็นลำดับ ปลอดภัย และสอดคล้องกับชีวิตประจำวัน<br>
             This page presents KRUNIKI’s foundational understanding for those who wish to begin caring for the heart and nervous system in a safe, step-by-step way that fits real life.
           </p>
 
-          <p class="lead">
+          <p class="lead" style="margin-top:10px;">
             เนื้อหานี้เป็นเนื้อหาเชิงการศึกษา (Public Learning Content) ไม่ใช่เนื้อหาหลักสูตร ไม่เปิดเผยเทคนิคเฉพาะของระบบการเรียนรู้ภายใน และไม่ทดแทนการดูแลทางการแพทย์หรือจิตบำบัด<br>
             This is public educational content. It is not a course curriculum, does not disclose internal proprietary techniques, and does not replace medical or psychological care.
           </p>
 
           <div class="ctaRow">
-            <a class="btn primary" href="practices.html">
-              เริ่มต้นจากการฝึกพื้นฐาน (Practices)<br>
-              Start with foundational practice (Practices)
-            </a>
-            <a class="btn" href="services.html">
-              Guided Support &amp; Services<br>
-              Guided Support &amp; Services
-            </a>
-            <a class="btn" href="certification.html">
-              Certification Framework (Academic Reference)<br>
-              Certification Framework (Academic Reference)
-            </a>
+            <a class="btn primary" href="practices.html">Practices</a>
+            <a class="btn" href="services.html">Services</a>
+            <a class="btn" href="certification.html">Certification</a>
           </div>
         </div>
 
         <div class="quoteCard" aria-label="Learning principle quote">
           <div class="quoteTop">
-            <div class="leftTitle">
-              Learning • พื้นที่เรียนรู้<br>
-              Learning • Learning Space
-            </div>
-            <div style="opacity:.8;">
-              Public Methodology<br>
-              Public Methodology
-            </div>
+            <div class="leftTitle">Short • Accessible</div>
+            <div style="opacity:.8;">Nervous-System Friendly</div>
           </div>
           <p class="quote">
-            “การเรียนรู้ที่ดี เริ่มจากกรอบที่ปลอดภัย และค่อย ๆ ลึกอย่างเป็นธรรมชาติ”<br>
-            “Good learning starts with safety and deepens naturally.”
+            การเริ่มต้นที่เหมาะสม คือ ระดับเบา ควบคุมได้ และไม่เร่งกระบวนการ<br>
+            A good beginning is gentle, self-controlled, and non-rushed.
           </p>
+          <div class="quoteNote">
+            การเรียนรู้เชิงแนวคิดทำหน้าที่เป็นฐาน เพื่อให้การเริ่มฝึก “ไม่กระตุ้นเกินความพร้อม”<br>
+            Conceptual learning serves as a base so practice does not exceed readiness.
+          </div>
         </div>
       </div>
     </section>
 
-    <!-- SAFETY NOTICE -->
-    <section id="safety">
+    <!-- Purpose -->
+    <section id="purpose">
       <div style="display:flex;align-items:flex-end;justify-content:space-between;gap:12px;">
         <div>
           <div class="kicker">
-            ขอบเขตและความปลอดภัยในการเรียนรู้<br>
-            Safety Notice
+            Learning Overview<br>
+            Learning Overview
           </div>
           <div style="font-size:26px;font-weight:850;letter-spacing:-.01em;margin-top:6px;">
-            Safety Notice<br>
-            Safety Notice
+            Foundations of Heart Awakening | ฐานการปลุกการรับรู้ของหัวใจ<br>
+            Foundations of Heart Awakening | Foundations of Heart Awakening
           </div>
         </div>
         <div style="color:var(--muted2);font-size:13px;">
-          ปลอดภัย • เบา • ควบคุมได้<br>
-          Safe • Gentle • Self-controlled
+          Boundaries • Safety • Pacing<br>
+          Boundaries • Safety • Pacing
+        </div>
+      </div>
+
+      <div class="panel" style="margin-top:14px;">
+        <div class="resBody">
+          <div class="resBox">
+            หน้านี้จัดทำขึ้นเพื่ออธิบายฐานความเข้าใจเชิงระบบ (Foundational Understanding) ของ KRUNIKI สำหรับบุคคลที่ต้องการเริ่มดูแลหัวใจและระบบประสาทอย่างเป็นลำดับ ปลอดภัย และสอดคล้องกับชีวิตประจำวัน<br>
+            This page presents KRUNIKI’s foundational understanding for those who wish to begin caring for the heart and nervous system in a safe, step-by-step way that fits real life.
+            <div style="height:10px;"></div>
+            เนื้อหานี้เป็นเนื้อหาเชิงการศึกษา (Public Learning Content) ไม่ใช่เนื้อหาหลักสูตร ไม่เปิดเผยเทคนิคเฉพาะของระบบการเรียนรู้ภายใน และไม่ทดแทนการดูแลทางการแพทย์หรือจิตบำบัด<br>
+            This is public educational content. It is not a course curriculum, does not disclose internal proprietary techniques, and does not replace medical or psychological care.
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Safety Notice -->
+    <section id="safety" style="margin-top:18px;">
+      <div style="display:flex;align-items:flex-end;justify-content:space-between;gap:12px;">
+        <div>
+          <div class="kicker">
+            Safety Notice<br>
+            Safety Notice
+          </div>
+          <div style="font-size:26px;font-weight:850;letter-spacing:-.01em;margin-top:6px;">
+            ขอบเขตและความปลอดภัยในการเรียนรู้<br>
+            Learning scope and safety
+          </div>
+        </div>
+        <div style="color:var(--muted2);font-size:13px;">
+          Gentle • Safe • Self-controlled<br>
+          Gentle • Safe • Self-controlled
         </div>
       </div>
 
@@ -224,29 +241,29 @@
             การเรียนรู้และการฝึกที่เกี่ยวข้องกับหัวใจ ลมหายใจ และระบบประสาท อาจส่งผลต่อสภาวะทางกายและอารมณ์แตกต่างกันในแต่ละบุคคล<br>
             Practices related to the heart, breath, and nervous system can affect the body and emotions differently for each person.
             <div style="height:10px;"></div>
-            หากคุณมีภาวะเครียดหรือวิตกกังวลรุนแรง ภาวะแพนิค เวียนหัวง่าย หรือภาวะทางกาย/จิตเวชที่ต้องดูแลเฉพาะทาง ควรเริ่มจากระดับเบาและปรึกษาผู้เชี่ยวชาญที่เกี่ยวข้อง<br>
+            หากคุณอยู่ในภาวะเครียดหรือวิตกกังวลรุนแรง ภาวะแพนิค เวียนหัวง่าย หรือภาวะทางกาย/จิตเวชที่ต้องดูแลเฉพาะทาง ควรเริ่มจากระดับเบาและปรึกษาผู้เชี่ยวชาญที่เกี่ยวข้อง<br>
             If you experience severe anxiety/stress, panic, frequent dizziness, or conditions requiring specialized care, start gently and consult an appropriate professional.
           </div>
         </div>
       </div>
     </section>
 
-    <!-- CORE FOUNDATIONS -->
-    <section id="foundations" style="margin-top:18px;">
+    <!-- Core Foundations -->
+    <section id="framework" style="margin-top:18px;">
       <div style="display:flex;align-items:flex-end;justify-content:space-between;gap:12px;">
         <div>
           <div class="kicker">
-            ฐานความเข้าใจหลัก<br>
-            Core Foundations
+            Core Foundations (01–04)<br>
+            Core Foundations (01–04)
           </div>
           <div style="font-size:26px;font-weight:850;letter-spacing:-.01em;margin-top:6px;">
-            Core Foundations — Foundation 01–04<br>
-            Core Foundations — Foundation 01–04
+            Core Foundations — ฐานความเข้าใจหลัก<br>
+            Core Foundations — Foundational understanding
           </div>
         </div>
         <div style="color:var(--muted2);font-size:13px;">
-          หัวใจ • ระบบประสาท • ความนิ่ง<br>
-          Heart • Nervous System • Stillness
+          Heart • Nervous System • Stillness • Breath<br>
+          Heart • Nervous System • Stillness • Breath
         </div>
       </div>
 
@@ -258,8 +275,8 @@
             Foundation 01
           </div>
           <h3>
-            Foundation 01<br>
-            Foundation 01
+            Heart Awakening ในความหมายเชิงระบบ<br>
+            Heart Awakening (systems meaning)
           </h3>
           <p>
             Heart Awakening คือกระบวนการกลับมารับรู้สภาวะภายในอย่างไม่ตัดสิน และค่อย ๆ ฟื้นความสัมพันธ์ที่ปลอดภัยกับตนเอง ไม่ใช่การบังคับคิดบวกหรือเร่งให้ “หาย”<br>
@@ -273,8 +290,8 @@
             Foundation 02
           </div>
           <h3>
-            Foundation 02<br>
-            Foundation 02
+            ความสัมพันธ์ระหว่างหัวใจและระบบประสาท<br>
+            Heart and nervous system relationship
           </h3>
           <p>
             เมื่อระบบประสาทตึง เราจะเข้าสู่โหมดป้องกันโดยอัตโนมัติ แนวทางของ KRUNIKI เริ่มจากสร้างความปลอดภัยให้ระบบประสาทก่อน เพื่อให้หัวใจค่อย ๆ เปิดได้ตามธรรมชาติ<br>
@@ -288,8 +305,8 @@
             Foundation 03
           </div>
           <h3>
-            Foundation 03<br>
-            Foundation 03
+            ความหมายของ Stillness<br>
+            The meaning of Stillness
           </h3>
           <p>
             Stillness ไม่ใช่ความว่างเปล่าหรือการหยุดคิด แต่คือพื้นที่ที่จิตใจหยุดไหลไปตามแรงกระตุ้นชั่วคราว และกลับมารับรู้ร่างกาย ลมหายใจ และความรู้สึกโดยไม่เร่งผลลัพธ์<br>
@@ -303,8 +320,8 @@
             Foundation 04
           </div>
           <h3>
-            Foundation 04<br>
-            Foundation 04
+            Breathwork ในบริบทสาธารณะ<br>
+            Breathwork (public context)
           </h3>
           <p>
             Breathwork ในพื้นที่สาธารณะต้องยึดหลัก ปลอดภัย เบา ทำได้จริง: ไม่ฝืนลมหายใจ เน้นหายใจออกอย่างผ่อนคลาย และสังเกตร่างกายเป็นหลัก หากเวียนหัวคือสัญญาณว่าแรงเกินไป<br>
@@ -315,102 +332,122 @@
       </div>
     </section>
 
-    <!-- LEARNING LIBRARY -->
-    <section id="library" style="margin-top:18px;">
-      <div class="panel">
-        <div class="resHead">
-          <h2>
-            Learning Library<br>
-            Learning Library
-          </h2>
-          <div class="resTag">
-            คลังความรู้เชิงแนวคิด (ทยอยพัฒนา)<br>
-            Concept Library (In Development)
+    <!-- Learning Library -->
+    <section id="paths" style="margin-top:18px;">
+      <div style="display:flex;align-items:flex-end;justify-content:space-between;gap:12px;">
+        <div>
+          <div class="kicker">
+            Learning Library (In Progress)<br>
+            Learning Library (In Progress)
+          </div>
+          <div style="font-size:26px;font-weight:850;letter-spacing:-.01em;margin-top:6px;">
+            Learning Library — คลังความรู้เชิงแนวคิด (ทยอยพัฒนา)<br>
+            Learning Library — Conceptual resources (in progress)
           </div>
         </div>
+        <div style="color:var(--muted2);font-size:13px;">
+          Guide • Concept • Service Reference<br>
+          Guide • Concept • Service Reference
+        </div>
+      </div>
 
-        <div class="resBody">
-          <div class="resBox">
-
-            <p style="margin:0 0 12px 0;">
-              <strong>
-                Guide — การเริ่มฝึก 3–5 นาทีอย่างปลอดภัย<br>
-                Guide — Safe 3–5 Minute Start
-              </strong><br>
-              แนวทางเริ่มต้นสำหรับวันที่เวลาน้อยหรือใจอ่อนล้า เน้นความสม่ำเสมอ ความเบา และการปิดการฝึกอย่างเหมาะสม<br>
-              A starting approach for busy or depleted days—prioritizing consistency, gentleness, and proper closure.
-              <br>
-              <a href="practices.html">practices.html</a>
-            </p>
-
-            <p style="margin:0 0 12px 0;">
-              <strong>
-                Concept<br>
-                Concept
-              </strong><br>
-              ใจเร่ง หายใจสั้น และอยู่ในโหมดเฝ้าระวังต่อเนื่อง แนวทางคือ ลดแรงตึงของระบบก่อน แล้วค่อยพัฒนาการรับรู้อารมณ์<br>
-              Racing mind, shallow breath, persistent vigilance—reduce system strain first, then develop emotional awareness.
-            </p>
-
-            <p style="margin:0;">
-              <strong>
-                Service Reference<br>
-                Service Reference
-              </strong><br>
-              สำหรับผู้ที่ต้องการโครงสร้างและการปรับระดับที่เหมาะกับตนเอง สามารถเริ่มผ่านบริการ Session แบบสนับสนุน<br>
-              For those who want structure and personalization, begin with supportive session-based guidance.
-              <br>
-              <a href="services.html">services.html</a>
-            </p>
-
+      <div class="grid2" style="margin-top:14px;">
+        <div class="card">
+          <div class="kicker">
+            Guide<br>
+            Guide
           </div>
+          <h3>
+            การเริ่มฝึก 3–5 นาทีอย่างปลอดภัย<br>
+            Starting safely in 3–5 minutes
+          </h3>
+          <p>
+            แนวทางการเริ่มต้นสำหรับวันที่เวลาน้อยหรือใจอ่อนล้า เน้นความสม่ำเสมอ ความเบา และการปิดการฝึกอย่างเหมาะสม<br>
+            A starting approach for busy or depleted days—prioritizing consistency, gentleness, and proper closure.
+          </p>
+          <p style="margin-top:10px;">
+            <a class="btn" href="practices.html">Practices</a>
+          </p>
+        </div>
+
+        <div class="card">
+          <div class="kicker">
+            Concept<br>
+            Concept
+          </div>
+          <h3>
+            สัญญาณพื้นฐานของระบบประสาทที่ตึง<br>
+            Basic signs of nervous-system strain
+          </h3>
+          <p>
+            ใจเร่ง หายใจสั้น และอยู่ในโหมดเฝ้าระวังต่อเนื่อง แนวทางคือ ลดแรงตึงของระบบก่อน แล้วค่อยพัฒนาการรับรู้อารมณ์<br>
+            Racing mind, shallow breath, persistent vigilance—reduce system strain first, then develop emotional awareness.
+          </p>
+        </div>
+
+        <div class="card">
+          <div class="kicker">
+            Service Reference<br>
+            Service Reference
+          </div>
+          <h3>
+            การเริ่มฝึกพร้อมการดูแล<br>
+            Starting with guided support
+          </h3>
+          <p>
+            สำหรับผู้ที่ต้องการโครงสร้างและการปรับระดับที่เหมาะกับตนเอง สามารถเริ่มผ่านบริการ Session แบบสนับสนุน<br>
+            For those who want structure and personalization, begin with supportive session-based guidance.
+          </p>
+          <p style="margin-top:10px;">
+            <a class="btn" href="services.html">Services</a>
+          </p>
         </div>
       </div>
     </section>
 
-    <!-- NEXT STEP -->
-    <section id="next" style="margin-top:18px;">
+    <!-- Next Step -->
+    <section id="guidance" style="margin-top:18px;">
       <div class="panel">
         <div class="resHead">
           <h2>
-            Next Step<br>
-            Next Step
+            Next Step — การเชื่อมการเรียนรู้สู่การปฏิบัติ<br>
+            Next Step — Connecting learning to practice
           </h2>
           <div class="resTag">
-            การเชื่อมการเรียนรู้สู่การปฏิบัติ<br>
-            Connect Learning to Practice
+            Practices (3–5 minutes)<br>
+            Practices (3–5 minutes)
           </div>
         </div>
-
         <div class="resBody">
           <div class="resBox">
-            การเรียนรู้เชิงแนวคิดเป็นจุดเริ่มต้น การฝึกสั้นอย่างเหมาะสมช่วยให้ระบบประสาทและหัวใจค่อย ๆ ปรับตัวได้อย่างมั่นคง<br>
+            การเรียนรู้เชิงแนวคิดเป็นเพียงจุดเริ่มต้น การฝึกสั้นอย่างเหมาะสมช่วยให้ระบบประสาทและหัวใจค่อย ๆ ปรับตัวได้อย่างมั่นคง<br>
             Conceptual learning is the start; short, appropriate practice helps the nervous system and heart stabilize over time.
-            <div style="margin-top:12px;">
-              <a href="practices.html">practices.html</a>
-            </div>
+            <div style="height:10px;"></div>
+            หน้า Practices ถูกออกแบบเพื่อรองรับการเริ่มต้นในระดับ 3–5 นาที ก่อนขยับสู่การฝึกที่เหมาะกับชีวิตจริงของแต่ละบุคคล<br>
+            The Practices page supports a 3–5 minute start before moving into deeper work that fits real life.
+            <div style="height:12px;"></div>
+            <a class="btn primary" href="practices.html">Practices</a>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- MINI FAQ -->
+    <!-- FAQ -->
     <section id="faq" style="margin-top:18px;">
       <div class="panel">
         <div class="resHead">
           <h2>
-            Mini FAQ<br>
-            Mini FAQ
+            Mini FAQ — คำถามที่พบบ่อย<br>
+            Mini FAQ — Common questions
           </h2>
           <div class="resTag">
-            คำถามที่พบบ่อย<br>
-            Frequently Asked Questions
+            Brief<br>
+            Brief
           </div>
         </div>
 
         <div class="resBody">
           <div class="resBox">
-
             <details class="faq">
               <summary>
                 การเรียนรู้จากหน้านี้ช่วยอะไรได้บ้าง?<br>
@@ -443,23 +480,22 @@
                 Consider sessions for assessment and tailored practice structure.
               </p>
             </details>
-
           </div>
         </div>
       </div>
     </section>
 
-    <!-- CLOSING NOTE + RELATED PATHWAYS -->
+    <!-- Closing Note + CTAs -->
     <section id="closing" style="margin-top:18px;">
       <div class="panel">
         <div class="contactHead">
           <h2>
-            Closing Note<br>
-            Closing Note
+            Closing Note — บทสรุปเชิงสถาบัน<br>
+            Closing Note — Academic summary
           </h2>
           <div class="small">
-            บทสรุปเชิงสถาบัน<br>
-            Academic Closing
+            Learning base • Boundaries • Safety<br>
+            Learning base • Boundaries • Safety
           </div>
         </div>
 
@@ -475,8 +511,8 @@
                 <path d="M21 12c0 4.4-4 8-9 8-1.1 0-2.2-.2-3.2-.5L4 21l1-3.2C3.7 16.3 3 14.2 3 12c0-4.4 4-8 9-8s9 3.6 9 8Z"
                   fill="none" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
               </svg>
-              เส้นทางการเรียนรู้ที่เกี่ยวข้อง<br>
-              Related Pathways
+              Related Pathways • เส้นทางการเรียนรู้ที่เกี่ยวข้อง<br>
+              Related Pathways • Related learning pathways
             </div>
 
             <a class="btn primary" href="practices.html">
