--- a/learning.html
+++ b/learning.html
@@ -162,8 +162,8 @@
 
           <div class="ctaRow">
             <a class="btn primary" href="practices.html">Practices</a>
-            <a class="btn" href="services.html">Services</a>
-            <a class="btn" href="certification.html">Certification</a>
+            <a class="btn" href="services.html">Guided Services</a>
+            <a class="btn" href="certification.html">KRUNIKI Certification Program</a>
           </div>
         </div>
 
