--- a/learning.html
+++ b/learning.html
@@ -144,8 +144,8 @@
       <div class="heroGrid">
         <div class="heroText">
           <div class="goldline">
-            Learning • พื้นที่เรียนรู้เชิงระบบ (เวอร์ชันสาธารณะ) KRUNIKI<br>
-            Learning • Systems-Based Learning Space (Public Version) KRUNIKI
+            Learning • Systems-Based Learning Space (Public Version) KRUNIKI<br>
+            
           </div>
 
           <h1>Foundations of Heart Awakening</h1>
@@ -490,7 +490,7 @@
       <div class="panel">
         <div class="contactHead">
           <h2>
-            Closing Note — บทสรุปเชิงสถาบัน<br>
+            Closing Note<br>
          
           </h2>
           <div class="small">
