--- a/shop-brainwaves.html
+++ b/shop-brainwaves.html
@@ -31,7 +31,7 @@
   <script src="assets/main.js" defer></script>
 </head>
 
-<body class="page--shop-brainwaves">
+<body class="page--shop shopPage page--shop-brainwaves">
 
   <!-- HEADER (คงโครงเดียวกับหน้า eBook Package) -->
   <header class="siteHeader">
