--- a/resources.html
+++ b/resources.html
@@ -164,7 +164,7 @@
             <div class="ctaRow">
               <a class="btn primary" href="practices.html">ไปหน้า Practices</a>
               <a class="btn" href="services.html">Guided Support</a>
-              <a class="btn" href="certification.html">ดูโปรแกรม 8–12 เดือน</a>
+              <a class="btn" href="certification.html">KRUNIKI Certification Program</a>
             </div>
           </div>
 
