--- a/about.html
+++ b/about.html
@@ -142,11 +142,13 @@
           KRUNIKI คือระบบการเรียนรู้และการปฏิบัติ<br>
           ที่ออกแบบมาเพื่อพาผู้คนกลับไปสู่ศูนย์กลางของตนเอง<br>
           ผ่านสติ ความนิ่ง ลมหายใจ และการฟังหัวใจอย่างเป็นลำดับ
+          หัวใจ • ความนิ่ง • การเยียวยาภายใน
         </p>
         <p class="en lead">
           KRUNIKI is a structured learning and practice system<br>
           designed to guide individuals back to their inner center<br>
           through mindfulness, stillness, breath, and heart-based awareness, in a clear and sequential manner.
+          Heart • Stillness • Healing
         </p>
       </div>
 
