--- a/about.html
+++ b/about.html
@@ -131,29 +131,30 @@
   <main class="pageMain aboutPage">
 
   <!-- 1) Hero / Opening Statement -->
-  <section class="panel hero aboutHero" aria-labelledby="aboutHeroTitle">
-    <div class="container">
+ <section class="panel hero aboutHero" aria-labelledby="aboutHeroTitle">
+  <div class="container">
+    <div class="aboutHeroInner">
+      <div class="goldline">Connect gently • About <strong>KRUNIKI</strong></div>
+      <h1 id="aboutHeroTitle">KRUNIKI — Where the Heart Comes Home.</h1>
 
-      <div class="aboutHeroInner">
-        <div class="goldline">Connect gently • About <strong>KRUNIKI</strong></div>
-        <h1 id="aboutHeroTitle">KRUNIKI — Where the Heart Comes Home.</h1>
+      <p class="th lead">
+        KRUNIKI คือระบบการเรียนรู้และการปฏิบัติ<br>
+        ที่ออกแบบมาเพื่อพาผู้คนกลับไปสู่ศูนย์กลางของตนเอง<br>
+        ผ่านสติ ลมหายใจ และการฟังหัวใจอย่างเป็นลำดับ<br>
+        <span class="tagline">หัวใจ • ความนิ่ง • การเยียวยาภายใน</span>
+      </p>
 
-        <p class="th lead">
-          KRUNIKI คือระบบการเรียนรู้และการปฏิบัติ<br>
-          ที่ออกแบบมาเพื่อพาผู้คนกลับไปสู่ศูนย์กลางของตนเอง<br>
-          ผ่านสติ ความนิ่ง ลมหายใจ และการฟังหัวใจอย่างเป็นลำดับ
-          หัวใจ • ความนิ่ง • การเยียวยาภายใน
-        </p>
-        <p class="en lead">
-          KRUNIKI is a structured learning and practice system<br>
-          designed to guide individuals back to their inner center<br>
-          through mindfulness, stillness, breath, and heart-based awareness, in a clear and sequential manner.
-          Heart • Stillness • Healing
-        </p>
-      </div>
-
+      <p class="en lead">
+        KRUNIKI is a structured learning and practice system<br>
+        designed to guide individuals back to their inner center<br>
+        through mindfulness, breath-based awareness, and heart-centered listening,<br>
+        in a clear and sequential manner,<br>
+        where stillness emerges as awareness returns to the breath.<br>
+        <span class="tagline">Heart • Stillness • Inner Healing</span>
+      </p>
     </div>
-  </section>
+  </div>
+</section>
 
   <div class="aboutDivider" aria-hidden="true"></div>
 
