--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       </div>
 
       <div class="banner" aria-label="KRUNIKI Banner">
-        <img src="home-banner.webp" alt="KRUNIKI — Heart Awakening Banner" loading="lazy" decoding="async" />
+        <img src="assets/images/banners/home-banner_1.webp" alt="KRUNIKI — Heart Awakening Banner" loading="lazy" decoding="async" />
       </div>
     </section>
 
