--- a/services_old.html
+++ b/services_old.html
@@ -88,6 +88,18 @@
 
 <main class="wrap">
 
+ <!-- =========================
+      BANNER (เหมือน shop.html)
+      ========================= -->
+  <div class="container hero__bannerWrap">
+    <img
+      class="hero__banner"
+      src="assets/images/banners/kruniki-soulsync-system-banner_4.webp"
+      alt="KRUNIKI — Services"
+      loading="lazy"
+    />
+  </div>
+  
 <!-- Hero -->
 <section class="panel">
   <section class="services-hero">
